WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209727
REGRESSION(258906): [GTK] fast/forms/placeholder-content-line-height.html is failing
https://bugs.webkit.org/show_bug.cgi?id=209727
Summary
REGRESSION(258906): [GTK] fast/forms/placeholder-content-line-height.html is ...
Diego Pino
Reported
2020-03-30 03:21:43 PDT
The test is failing since 258906: fast/forms/placeholder-content-line-height.html [ ImageOnlyFailure ] It seems the issue is that placeholder-content-line-height.html and placeholder-content-line-height-expected.html are rendered with different font families. If I remove "font-family: system-ui;" in placeholder-content-center-expected.html, the test passes.
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2020-03-30 09:37:48 PDT
Two more tests are failing as regressions of 258906: imported/w3c/web-platform-tests/css/css-values/ch-unit-002.html [ ImageOnlyFailure ] imported/w3c/web-platform-tests/css/css-values/ch-unit-011.html [ ImageOnlyFailure ]
Diego Pino
Comment 2
2026-04-17 08:33:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62979
Diego Pino
Comment 3
2026-04-25 13:06:58 PDT
Pull request:
https://github.com/webkit/webkit/pull/62979
Diego Pino
Comment 4
2026-04-26 02:17:51 PDT
***
Bug 209403
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2026-04-27 01:59:46 PDT
Committed
312073@main
(a49dbdc4147c): <
https://commits.webkit.org/312073@main
> Reviewed commits have been landed. Closing PR #62979 and removing active labels.
Radar WebKit Bug Importer
Comment 6
2026-04-27 02:00:17 PDT
<
rdar://problem/175661564
>
Diego Pino
Comment 7
2026-04-28 06:49:36 PDT
Re-opening for pull request
https://github.com/webkit/webkit/pull/63791
EWS
Comment 8
2026-04-30 02:42:12 PDT
Committed
312351@main
(73d4d6d5e1fd): <
https://commits.webkit.org/312351@main
> Reviewed commits have been landed. Closing PR #63791 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug