[GTK] fast/forms/placeholder-content-line-height.html is failing https://bugs.webkit.org/show_bug.cgi?id=209727

Reviewed by Carlos Garcia Campos.

Modify 'getFamilyNameStringFromFamily' function to check at its preamble
whether the requested font is any of the keywords for a system font. In that
case, resolve the requested font name to the system's default system font.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/fast/forms/auto-fill-button/input-strong-password-auto-fill-button-expected.txt:
* LayoutTests/platform/glib/fast/html/details-marker-style-expected.txt:
* LayoutTests/platform/glib/fast/html/details-marker-style-mixed-expected.txt:
* LayoutTests/platform/glib/fast/text/system-font-features-expected.html: Added.
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/gtk/fonts/systemFont.html:
* LayoutTests/platform/wpe/fast/forms/placeholder-content-center-expected.html: Added.
* LayoutTests/platform/wpe/fast/forms/placeholder-content-line-height-expected.html: Added.
* Source/WebCore/platform/graphics/skia/FontCacheSkia.cpp:
(WebCore::isSystemUIFamilyFont):
(WebCore::getFamilyNameStringFromFamily):

Canonical link: https://commits.webkit.org/312073@main