Source/WebCore/platform/graphics/skia/FontCacheSkia.cpp
@@ -204,8 +204,26 @@ Vector<FontSelectionCapabilities> FontCache::getFontSelectionCapabilitiesInFamil
     return { };
 }
 
+#if PLATFORM(GTK) || (PLATFORM(WPE) && ENABLE(WPE_PLATFORM))
+static bool isSystemUIFamilyFont(const String& family)
+{
+    return family == "-apple-system-font"_s
+        || family == "-apple-system"_s
+        || family == "-webkit-system-font"_s
+        || family == "-webkit-system-ui"_s
+        || family == "system-font"_s
+        || family == "system-ui"_s
+        || family == "ui-sans-serif"_s;
+}
+#endif
+
 static String getFamilyNameStringFromFamily(const String& family)
 {
+#if PLATFORM(GTK) || (PLATFORM(WPE) && ENABLE(WPE_PLATFORM))
+    if (isSystemUIFamilyFont(family))
+        return SystemSettings::singleton().defaultSystemFont();
+#endif
+
     // If we're creating a fallback font (e.g. "-webkit-monospace"), convert the name into
     // the fallback name (like "monospace") that fontconfig understands.
     if (family.length() && !family.startsWith("-webkit-"_s))
@@ -223,11 +241,6 @@ static String getFamilyNameStringFromFamily(const String& family)
         return "fantasy"_s;
     if (family == *familyNamesData->at(FamilyNamesIndex::MathFamily))
         return "math"_s;
-
-#if PLATFORM(GTK) || (PLATFORM(WPE) && ENABLE(WPE_PLATFORM))
-    if (family == *familyNamesData->at(FamilyNamesIndex::SystemUiFamily) || family == "-webkit-system-font"_s)
-        return SystemSettings::singleton().defaultSystemFont();
-#endif
 
     return emptyString();
 }
